[spacex] implement flights persistence;

--- a/app/src/main/res/layout/activity_flight_details.xml
+++ b/app/src/main/res/layout/activity_flight_details.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/launch_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.details.launched ? R.string.launch_status_success : R.string.launch_status_failure}"
+                android:text="@{viewModel.details.launched ? @string/launch_status_success : @string/launch_status_failure}"
                 android:background="@{viewModel.details.launched ? @color/launch_status_success : @color/launch_status_failure}"
                 app:layout_constraintBaseline_toBaselineOf="@+id/mission_name"
                 app:layout_constraintEnd_toEndOf="parent"
