--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="flight_list_padding">20dp</dimen>
     <dimen name="flight_launch_date_top_margin">10dp</dimen>
     <dimen name="card_view_content_padding">20dp</dimen>
-    <dimen name="card_view_margin">10dp</dimen>
+    <dimen name="card_view_start_margin">20dp</dimen>
+    <dimen name="card_view_margin">20dp</dimen>
 </resources>
