--- a/app/src/main/res/layout/fragment_flight_details.xml
+++ b/app/src/main/res/layout/fragment_flight_details.xml
@@ -21,82 +21,88 @@
         app:cardUseCompatPadding="true"
         style="@style/FlightCard">
 
-        <android.support.constraint.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="@{viewModel.isContentVisible ? View.VISIBLE : View.GONE}">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/mission_name"
-                android:layout_width="0dp"
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:gravity="end"
-                android:text="@{viewModel.details.missionName}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/launch_photo"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Mission Name"
-                style="@style/FlightTitle"/>
+                android:visibility="@{viewModel.isContentVisible ? View.VISIBLE : View.GONE}">
 
-            <TextView
-                android:id="@+id/launch_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@{viewModel.details.launched ? @color/launch_status_success : @color/launch_status_failure}"
-                android:text="@{viewModel.details.launched ? @string/launch_status_success : @string/launch_status_failure}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mission_name"
-                tools:text="Success"
-                style="@style/FlightStatus"/>
+                <TextView
+                    android:id="@+id/mission_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:gravity="end"
+                    android:text="@{viewModel.details.missionName}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toEndOf="@+id/launch_photo"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Mission Name"
+                    style="@style/FlightTitle"/>
 
-            <ImageView
-                android:id="@+id/launch_photo"
-                android:layout_width="@dimen/photo_size"
-                android:layout_height="@dimen/photo_size"
-                android:contentDescription="@string/photo_content_description"
-                android:scaleType="centerCrop"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                <TextView
+                    android:id="@+id/launch_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:background="@{viewModel.details.launched ? @color/launch_status_success : @color/launch_status_failure}"
+                    android:text="@{viewModel.details.launched ? @string/launch_status_success : @string/launch_status_failure}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/mission_name"
+                    tools:text="Success"
+                    style="@style/FlightStatus"/>
 
-            <TextView
-                android:id="@+id/launch_date"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@{viewModel.details.launchDate}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/launch_photo"
-                tools:text="Date: 00:30:00 03/25/2006"
-                style="@style/FlightSubtitle"/>
+                <ImageView
+                    android:id="@+id/launch_photo"
+                    android:layout_width="@dimen/photo_size"
+                    android:layout_height="@dimen/photo_size"
+                    android:contentDescription="@string/photo_content_description"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
-            <TextView
-                android:id="@+id/launch_site"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.details.launchSite}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/launch_date"
-                tools:text="Location: Kwajalein Omelek Atoll Island"
-                style="@style/FlightSubtitle"/>
+                <TextView
+                    android:id="@+id/launch_date"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@{viewModel.details.launchDate}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/launch_photo"
+                    tools:text="Date: 00:30:00 03/25/2006"
+                    style="@style/FlightSubtitle"/>
 
-            <TextView
-                android:id="@+id/launch_details"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="@{viewModel.details.details}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/launch_site"
-                tools:text="Flight Details"
-                style="@style/FlightDescription"/>
+                <TextView
+                    android:id="@+id/launch_site"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.details.launchSite}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/launch_date"
+                    tools:text="Location: Kwajalein Omelek Atoll Island"
+                    style="@style/FlightSubtitle"/>
 
-        </android.support.constraint.ConstraintLayout>
+                <TextView
+                    android:id="@+id/launch_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:text="@{viewModel.details.details}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/launch_site"
+                    tools:text="Flight Details"
+                    style="@style/FlightDescription"/>
+
+            </android.support.constraint.ConstraintLayout>
+
+        </ScrollView>
 
         <TextView
             android:layout_width="wrap_content"
